--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.2",
+    "circular-json": "^0.5.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
